corrected the spacing of the project show and contents page

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1,11 +1,4 @@
-.project-list {
-    list-style-type: none;
-    a {
-      color: black;
-    }
-}
-
-.container{
+.container{ //Main body of every page
   background-color: rgb(255, 255, 255);
   padding-top: 2em;
   min-height: 81vh;
@@ -14,66 +7,84 @@
 }
 
 #dashboard-section {
-    background-color: rgb(168, 167, 167);
-    border-radius: 0.1em;
-    padding: 1em;
-    max-width: 70%;
-    max-height: fit-content;
-    border-style: solid;
-    border-color: rgb(0, 0, 0);
-    border-radius: 50px;
+  background-color: rgb(168, 167, 167);
+  border-radius: 0.1em;
+  padding: 1em;
+  max-width: 70%;
+  max-height: fit-content;
+  border-style: solid;
+  border-color: rgb(0, 0, 0);
+  border-radius: 50px;
 
-    h2 {
-      margin-left: 0.2em;
-      text-decoration: underline;
-      text-decoration-thickness: 3px;
-    }
-
-    .btn-dark {
-      margin-left: 0.5em;
-      margin-bottom: 0.5em;
-    }
-}
-
-.pending-project {
-    margin-left: 10em;
-}
-
-dl {
-  width: 100%;
-  overflow: hidden;
-  padding: 0;
-  margin: 0
-}
-dt {
-  float: left;
-  width: 50%;
-  /* adjust the width; make sure the total of both is 100% */
-  padding: 0;
-  margin: 0;
-  clear: both
-}
-dd {
-  float: left;
-  width: 50%;
-  /* adjust the width; make sure the total of both is 100% */
-  padding: 0;
-  margin: 0
-}
-#show{
   h2 {
     margin-left: 0.2em;
     text-decoration: underline;
     text-decoration-thickness: 3px;
   }
+  .project-list {
+    list-style-type: none;
+    a {
+      color: black;
+    }
+}
+  .btn-dark {
+    margin-left: 0.5em;
+    margin-bottom: 0.5em;
+  }
+}
 
+#show{
+  .pending-project {
+    margin-left: 5em;
+}
+  .details{
+    margin-left: 5em;
+  }
+  h2 {// Heading for the details div
+    margin-left: 0.2em;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+  }
+  dl {
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0
+  }
   dt {
     float: left;
-    max-width: 25%;
+    min-width: calc(25% + 5em);
     /* adjust the width; make sure the total of both is 100% */
     padding: 0;
     margin: 0;
+    margin-left: 1em;
     clear: both
   }
+  dd{
+    margin-bottom: .5rem;
+    margin-left: 0;
 
+  }
+  p {
+    margin-left: 1em;
+  }
+}
+
+#content{
+  dt {
+    float: left;
+    min-width: calc(25% + 5em);
+    /* adjust the width; make sure the total of both is 100% */
+    padding: 0;
+    margin: 0;
+    margin-left: 1em;
+    clear: both
+  }
+  dd{
+    margin-bottom: .5rem;
+    margin-left: 0;
+  }
+  .btn.btn-primary.btn-sm{
+    margin-left: 1em;
+  }
 }
